--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -14,7 +14,7 @@
     <div class="form-container">
         <h1 class="title">ChatsApp</h1>
 
-        <form action="/login" method="post">
+        <form action="/auth/login" method="post">
             <!-- Поле для ввода имени пользователя -->
             <div class="input-group">
                 <i class="icon">
@@ -67,7 +67,7 @@
             <button class="login-button" type="submit">Log in</button>
 
             <div class="signup-link">
-                <a href="/register">Sign up now</a>
+                <a href="/auth/register">Sign up now</a>
             </div>
         </form>
     </div>
