--- a/frontend/templates/register.html
+++ b/frontend/templates/register.html
@@ -14,7 +14,7 @@
     <div class="form-container-register">
         <h1 class="title">ChatsApp</h1>
 
-        <form action="/register" method="post">
+        <form action="/auth/register" method="post">
             <!-- Поле для ввода имени пользователя -->
             <div class="input-group">
                 <i class="icon">
@@ -103,7 +103,7 @@
             <button class="login-button" type="submit">Sign up</button>
 
             <div class="signup-link">
-                <a href="/">Already have an account?</a>
+                <a href="/login">Already have an account?</a>
             </div>
         </form>
     </div>
